--- a/Herpes simplex.adoc
+++ b/Herpes simplex.adoc
@@ -1,5 +1,9 @@
 # Herpes simplex
 
+Wirusy opryszczki pospolitej,
+HSV (herpes simplex virus, HHV-1 i HHV-2, human herpesvirus - ludzki herpeswirus) 
+
+
 Drzewa iglaste zyja dlugo.
 
 TODO:
