--- a/Herpes simplex.adoc
+++ b/Herpes simplex.adoc
@@ -1,7 +1,7 @@
-# Herpes simplex
+# Herpes simplex (zakażenia opryszczkowe)
 
 Wirusy opryszczki pospolitej,
-HSV (herpes simplex virus, HHV-1 i HHV-2, human herpesvirus - ludzki herpeswirus) 
+HSV (herpes simplex virus, HHV-1 i HHV-2, human herpesvirus - ludzki herpeswirus)
 
 
 Drzewa iglaste zyja dlugo.
