--- a/Herpes simplex.adoc
+++ b/Herpes simplex.adoc
@@ -5,7 +5,7 @@ Wirusy opryszczki pospolitej/zwykłej
 Choroba zakaźna wywołana przez wirusy HSV1 i HSV2 (Herpes simplex virus).
 
 
-# 1	Choroby wywołane przez HSV1
+## 1	Choroby wywołane przez HSV1
 
   1.1	Opryszczka wargowa
 
