--- a/Herpes simplex.adoc
+++ b/Herpes simplex.adoc
@@ -38,8 +38,8 @@ Choroby wywołane przez HSV1|Choroby wywołane przez HSV2
 
 |Opryszczka wargowa|Opryszczka narządów płciowych
 |Opryszczkowe zapalenia jamy ustnej|Zakażenie wrodzone
-|Egzema herpeticum|-
-|Opryszczkowe zapalenie mózgu i opon mózgowych|-
+|Egzema herpeticum|.2+
+|Opryszczkowe zapalenie mózgu i opon mózgowych|
 |===
 
 #Inne zmiany narządowe
