--- a/Herpes simplex.adoc
+++ b/Herpes simplex.adoc
@@ -38,7 +38,7 @@ Choroby wywołane przez HSV1|Choroby wywołane przez HSV2
 
 |Opryszczka wargowa|Opryszczka narządów płciowych
 |Opryszczkowe zapalenia jamy ustnej|Zakażenie wrodzone
-|Egzema herpeticum.2+|
+|Egzema herpeticum|
 |Opryszczkowe zapalenie mózgu i opon mózgowych|
 |===
 
