--- a/Herpes simplex.adoc
+++ b/Herpes simplex.adoc
@@ -45,7 +45,7 @@ Choroby wywołane przez HSV1|Choroby wywołane przez HSV2
 
 ## Kilka zdjęć
 
-image::opryszczka wargowa.jpg[]
+image::opryszczka wargowa.jpg[opryszczka,300,200]
 
 
 
