--- a/Gdynia/README.adoc
+++ b/Gdynia/README.adoc
@@ -86,7 +86,6 @@ POWIERZCHNIA ogółem - 13 514 ha.
 
 == Logo miasta Gdynia:
 
-[#img-logo gdynia]
-.A Logo Gdynia
-[link=http://jogapilates.pl/wp-content/uploads/logo-Gdynia.jpg]
+
+.Logo Gdynia
 image::logo-Gdynia.jpg[logo-Gdynia,600]
